# e-affidavit-demo_backend

./: entrypoint.sh  housepal_backend_key.pem  pyproject.toml  requirements.txt
app/: main.py
app/api/dependencies/: authentication.py
app/api/routers/: attestation_route.py  authentication_route.py  document_route.py  routes.py  user_routes.py  user_type_routes.py
app/core/errors/: error_strings.py  exceptions.py
app/core/services/: jwt.py
app/core/settings/: config.py  security.py
app/core/settings/env_files/: .env
app/database/: base.py  session.py
app/models/: attestation_model.py  attested_document_model.py  document_model.py  user_model.py  user_type_model.py
app/repositories/: attesatation_repo.py  document_repo.py  user_repo.py  user_type_repo.py
app/schemas/: __init__.py  attestation_schema.py  document_schema.py  generic.py  jwt.py  reset_token.py  user.py  user_schema.py  user_type_schema.py
commonLib/models/: base_class.py
commonLib/schemas/: response_model.py
